--- a/package.json
+++ b/package.json
@@ -1,28 +1,31 @@
 {
-  "name": "worker",
+  "name": "coding-machine-worker",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "ts-node-dev --respawn  index.ts ",
+    "dev": "sls invoke local --function receiver --path mocks/code.json --env DATABASE=",
     "start": "node dist/index.js",
-    "build": "npx tsc"
+    "build": "rm -rf dist && npx tsc"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/aws-lambda": "^8.10.136",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.23",
+    "serverless-dotenv-plugin": "^6.0.0",
+    "serverless-offline": "^13.3.3",
+    "serverless-plugin-scripts": "^1.0.2",
     "ts-node-dev": "^1.1.8"
   },
   "dependencies": {
-    "amqp-connection-manager": "^4.1.1",
+    "aws-lambda": "^1.0.7",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
-    "express": "^4.17.3",
-    "mongoose": "^6.2.9"
+    "mongoose": "^8.2.2"
   }
 }
